Wed Apr 27 20:25:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Reactor/Misc/pingpong.cpp:
          When no commandline argument has been passed, exit normally with
          an ACE_ERROR_RETURN instead of an abort

Wed Apr 27 18:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Message_Block.h:
          Removed include of stdlib.h, it shouldn't be here

        * ace/Process_Semaphore.h:
        * ace/Reactor.h:
        * ace/SOCK_Stream.h:
        * ace/Task.h:
        * ace/Token_Request_Reply.h:
        * ace/UPIPE_Stream.h:
          Doxygen improvements

Wed Apr 27 15:31:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/ace_tk.mpb:
          Fixed wrong LDFLAGS. Thanks to Peter Grotrian
          <peter dot grotrian at pdv-fs dot de> for reporting this. This
          fixes bugzilla [2096]

Wed Apr 27 15:27:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Barrier.h:
        * ace/DLL.cpp:
          Added missing includes when threads=0. Thanks to Peter Grotrian
          <peter dot grotrian at pdv-fs dot de> for reporting this. This
          fixes bugzilla [2097]

Wed Apr 27 15:11:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.inl:
          When ACE_HAS_CLOCK_GETTIME is defined include ace/os_include/
          os_time.h to get nanosleep. Fixes compile errors with gcc on ia64

Tue Apr 26 10:59:02 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* netsvcs/lib/Makefile.am:

	  Add *_LDFLAGS definition to set shared library version number.

Sun Apr 24 14:02:51 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * bin/ciao_tests.lst:

          CIAO regression test won't run on minimum_corba. Added the
          configuration requirement in the file.

Sun Apr 24 10:53:40 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* ace/MEM_Stream.h:
	* ace/MEM_Acceptor.cpp: Changed code to ensure the internal buffer