@@ -1,3 +1,12 @@
+Wed Apr 27 14:29:03 2005  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* ace/Log_Msg.cpp (ACE_Log_Msg::log_hexdump):
+
+	  Check log priority before allocating message buffer and
+	  formatting message, an unnecessary expense if the message isn't
+	  going to be output.  Thanks to < joez at datawire dot net > for
+	  reporting this problem.
+
 Wed Apr 27 20:25:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * examples/Reactor/Misc/pingpong.cpp:
